<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >

    <!-- title stub -->

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="256dip"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/title"
            style="@style/dialog_title_style"
            android:text="@string/prompt" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="@color/holo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contentPanel"
        android:layout_width="256dip"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/message_text"
                style="@style/dialog_message_text_style"
                android:visibility="gone" />
        </ScrollView>
    </LinearLayout>

    <!-- button stub -->

    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="256dip"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/dialog_divider" >
        </View>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/positiveButton"
                style="@style/dialog_button_style"
                android:text="@string/dialog_btn_cancel"
                android:visibility="gone" />

            <View
                android:id="@+id/dialog_button_divider"
                android:layout_width="1px"
                android:layout_height="fill_parent"
                android:background="@color/dialog_divider"
                android:visibility="gone" >
            </View>

            <Button
                android:id="@+id/negativeButton"
                style="@style/dialog_button_style"
                android:text="@string/dialog_btn_ok"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>